iter_8_sifk_rejo
git-svn-id: http://repos.sigma-com.net/dev/Fmk/ePDV@3251 70ca12d9-96dc-0310-a6d6-b3c0cee7cb29

--- a/db/Makefile
+++ b/db/Makefile
@@ -5,7 +5,7 @@ include /sclib/Makefile_clipper
 
 SRCDOSROOT=c:\\dev\\fmk\\epdv\\db\\
 
-PRGS=db.prg m_adm.prg util.prg kuf_kif.prg tar.prg 
+PRGS=db.prg m_adm.prg util.prg kuf_kif.prg tar.prg part.prg 
 
 CS=
 ASMS=
