--- a/dok_gen/Makefile
+++ b/dok_gen/Makefile
@@ -5,7 +5,7 @@ include /sclib/Makefile_clipper
 
 SRCDOSROOT=c:\\dev\\fmk\\epdv\\dok_gen\\
 
-PRGS=m_gen.prg gen_kuf.prg gen_kif.prg
+PRGS=m_gen.prg gen_kuf.prg gen_kif.prg g_fakt.prg
 
 CS=
 ASMS=
