--- a/util/Makefile
+++ b/util/Makefile
@@ -5,7 +5,7 @@ include /sclib/Makefile_clipper
 
 SRCDOSROOT=c:\\dev\\fmk\\epdv\\util\\
 
-PRGS=date.prg part.prg tar.prg kuf_kif.prg pdv.prg
+PRGS=date.prg part.prg tar.prg kuf_kif.prg pdv.prg gen_dok.prg
 
 CS=
 ASMS=
