--- a/dok_gen/Makefile
+++ b/dok_gen/Makefile
@@ -1,30 +1,10 @@
 VERZIJA=CDX
 MODUL=epdv_dg
 
-include /sclib/Makefile_clipper
-
 SRCDOSROOT=c:\\dev\\fmk\\epdv\\dok_gen\\
 
 PRGS=m_gen.prg gen_kuf.prg gen_kif.prg g_fakt.prg g_kalk.prg g_tops.prg gu_kalk.prg gu_fin.prg g_fin.prg
-
 CS=
 ASMS=
 
-OBJS=$(OBJPRGS) $(OBJCS) $(OBJASMS)
-
-all: $(OBJS)
-	rm -f $(MODUL).lib 
-	$(LIBEXE) $(MODUL) $(LIBCMD) ,,
-	cp $(MODUL).lib $(LIB_DEST)
-
-	
-clean:
-	rm -f *~
-	rm -f *.xref
-	rm -f *.xrefs
-	rm -f *.html
-	rm -f *.OBJ *.obj
-	rm -f xref_files
-	rm -f $(OBJS) *.bak *.BAK
-
-
+include $(SC_BUILD_HOME_DIR)/sclib/Makefile_clipper
