--- a/main/Makefile
+++ b/main/Makefile
@@ -1,30 +1,10 @@
 VERZIJA=CDX
 MODUL=epdv_m
 
-include /sclib/Makefile_clipper
-
 SRCDOSROOT=c:\\dev\\fmk\\epdv\\main\\
 
 PRGS=app.prg
-
 CS=
 ASMS=
 
-OBJS=$(OBJPRGS) $(OBJCS) $(OBJASMS)
-
-all: $(OBJS)
-	rm -f $(MODUL).lib 
-	$(LIBEXE) $(MODUL) $(LIBCMD) $(LIBSUFFIX)
-	cp $(MODUL).lib $(LIB_DEST)
-
-	
-clean:
-	rm -f *~
-	rm -f *.xref
-	rm -f *.xrefs
-	rm -f *.html
-	rm -f *.OBJ *.obj
-	rm -f xref_files
-	rm -f $(OBJS) *.bak *.BAK
-
-
+include $(SC_BUILD_HOME_DIR)/sclib/Makefile_clipper
