izbacio test pdf
git-svn-id: http://repos.sigma-com.net/dev/Fmk/ePDV@3608 70ca12d9-96dc-0310-a6d6-b3c0cee7cb29

--- a/rpt/Makefile
+++ b/rpt/Makefile
@@ -3,7 +3,8 @@ MODUL=epdv_rpt
 
 SRCDOSROOT=c:\\dev\\fmk\\epdv\\rpt\\
 
-PRGS=m_rpt.prg rpt_kif.prg rpt_kuf.prg rpt_pdv.prg r_lista.prg test.prg
+PRGS=m_rpt.prg rpt_kif.prg rpt_kuf.prg rpt_pdv.prg r_lista.prg
+#test.prg
 CS=
 ASMS=
 
