napravljen build pod git-om

--- a/db/Makefile
+++ b/db/Makefile
@@ -1,10 +1,10 @@
 VERZIJA=CDX
 MODUL=epdv_db
 
-SRCDOSROOT=c:\\dev\\fmk\\epdv\\db\\
+SRCDOSROOT=$(BASEDOS)\\fmk\\epdv\\db\\
 
 PRGS=db.prg m_adm.prg util.prg kuf_kif.prg tar.prg part.prg  pdv.prg
 CS=
 ASMS=
 
-include $(SC_BUILD_HOME_DIR)/sclib/Makefile_clipper
+include ../../fmk_lib/Makefile_clipper
