--- a/dok_frm/Makefile
+++ b/dok_frm/Makefile
@@ -1,10 +1,10 @@
 VERZIJA=CDX
 MODUL=epdv_df
 
-SRCDOSROOT=c:\\dev\\fmk\\epdv\\dok_frm\\
+SRCDOSROOT=$(BASEDOS)\\fmk\\epdv\\dok_frm\\
 
 PRGS=ed_kuf.prg ed_kif.prg v_ed.prg 
 CS=
 ASMS=
 
-include $(SC_BUILD_HOME_DIR)/sclib/Makefile_clipper
+include ../../fmk_lib/Makefile_clipper
