--- a/dok_gen/Makefile
+++ b/dok_gen/Makefile
@@ -1,10 +1,10 @@
 VERZIJA=CDX
 MODUL=epdv_dg
 
-SRCDOSROOT=c:\\dev\\fmk\\epdv\\dok_gen\\
+SRCDOSROOT=$(BASEDOS)\\fmk\\epdv\\dok_gen\\
 
 PRGS=m_gen.prg gen_kuf.prg gen_kif.prg g_fakt.prg g_kalk.prg g_tops.prg gu_kalk.prg gu_fin.prg g_fin.prg
 CS=
 ASMS=
 
-include $(SC_BUILD_HOME_DIR)/sclib/Makefile_clipper
+include ../../fmk_lib/Makefile_clipper
