--- a/param/Makefile
+++ b/param/Makefile
@@ -1,10 +1,10 @@
 VERZIJA=CDX
 MODUL=epdv_par
 
-SRCDOSROOT=c:\\dev\\fmk\\epdv\\param\\
+SRCDOSROOT=$(BASEDOS)\\fmk\\epdv\\param\\
 
 PRGS=param.prg m_par.prg 
 CS=
 ASMS=
 
-include $(SC_BUILD_HOME_DIR)/sclib/Makefile_clipper
+include ../../fmk_lib/Makefile_clipper
