--- a/rpt/Makefile
+++ b/rpt/Makefile
@@ -1,11 +1,11 @@
 VERZIJA=CDX
 MODUL=epdv_rpt
 
-SRCDOSROOT=c:\\dev\\fmk\\epdv\\rpt\\
+SRCDOSROOT=$(BASEDOS)\\fmk\\epdv\\rpt\\
 
 PRGS=m_rpt.prg rpt_kif.prg rpt_kuf.prg rpt_pdv.prg r_lista.prg
 #test.prg
 CS=
 ASMS=
 
-include $(SC_BUILD_HOME_DIR)/sclib/Makefile_clipper
+include ../../fmk_lib/Makefile_clipper
