--- a/sif/Makefile
+++ b/sif/Makefile
@@ -1,10 +1,10 @@
 VERZIJA=CDX
 MODUL=epdv_sif
 
-SRCDOSROOT=c:\\dev\\fmk\\epdv\\sif\\
+SRCDOSROOT=$(BASEDOS)\\fmk\\epdv\\sif\\
 
 PRGS= m_sif.prg sg.prg sg_kuf.prg sg_kif.prg part.prg 
 CS=
 ASMS=
 
-include $(SC_BUILD_HOME_DIR)/sclib/Makefile_clipper
+include ../../fmk_lib/Makefile_clipper
