--- a/main/Makefile
+++ b/main/Makefile
@@ -1,10 +1,10 @@
 VERZIJA=CDX
 MODUL=epdv_m
 
-SRCDOSROOT=c:\\dev\\fmk\\epdv\\main\\
+SRCDOSROOT=$(BASEDOS)\\fmk\\epdv\\main\\
 
 PRGS=app.prg
 CS=
 ASMS=
 
-include $(SC_BUILD_HOME_DIR)/sclib/Makefile_clipper
+include ../../fmk_lib/Makefile_clipper
