--- a/util/Makefile
+++ b/util/Makefile
@@ -1,10 +1,10 @@
 VERZIJA=CDX
 MODUL=epdv_ut
 
-SRCDOSROOT=c:\\dev\\fmk\\epdv\\util\\
+SRCDOSROOT=$(BASEDOS)\\fmk\\epdv\\util\\
 
 PRGS=date.prg part.prg tar.prg kuf_kif.prg pdv.prg gen_dok.prg
 CS=
 ASMS=
 
-include $(SC_BUILD_HOME_DIR)/sclib/Makefile_clipper
+include ../../fmk_lib/Makefile_clipper
